# health-office-assistant

./: .gitignore  README.md  pyproject.toml
docs/specs/: 2026-05-06-design.md  2026-05-06-plan.md
src/hoa/: __init__.py  __main__.py  cli.py  config.py  daemon.py  idle.py  notifications.py  scheduler.py  state.py  tui.py
tests/: test_config.py  test_daemon.py  test_idle.py  test_notifications.py  test_scheduler.py  test_state.py
