[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-office-assistant"
version = "0.1.0"
description = "Background health reminder daemon for office workers"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.0",
    "click>=8.1.0",
    "textual>=0.50.0",
    "windows-toasts>=1.1.0",
]

[project.scripts]
hoa = "hoa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hoa"]
